# libpmemobj-ex1

./: CMakeLists.txt  Makefile  Makefile.bak  error_output.txt  layout.h  reader  writer
src/: reader.cpp  writer.cpp
