cmake_minimum_required(VERSION 3.1)
project(rw)
set(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_COMPILER /usr/bin/g++)
set(CMAKE_BUILD_TYPE Debug)
# set(CMAKE_EXE_LINKER_FLAGS "-I/usr/local/include -Wall")
# SET(CMAKE_EXE_LINKER_FLAGS  "-L/usr/local/lib -lpmemobj -lpmem")
include_directories(src)
include_directories(/usr/local/include)
include_directories(/usr/local/include/libpmemobj)

file(GLOB SOURCES "src/writer.cpp" "*.h")
# file(GLOB SOURCES2 "src/writer.cpp" "*.h" "*.cpp")

#add_library(pmemlib SHARED IMPORTED)
#add_library(pmemlib2 SHARED IMPORTED)
#add_library(pmemlib3 SHARED IMPORTED)
#set_target_properties(pmemlib PROPERTIES IMPORTED_LOCATION "/usr/local/lib/libpmemobj.so")
#set_target_properties(pmemlib2 PROPERTIES IMPORTED_LOCATION "/usr/local/lib/libpmemobj.so.1")
#set_target_properties(pmemlib3 PROPERTIES IMPORTED_LOCATION "/usr/local/lib/libpmemobj.so.1.0.0")

message("Sources: ${SOURCES}")
# find_library(LIBPMEMOBJ NAMES libpmemobj PATHS /usr/local/include)
set(EXE writer)
# set(EXE2 b)
add_executable(${EXE} ${SOURCES})
# add_executable(${EXE2} ${SOURCES2})

# target_link_libraries(${EXE} ${pmemlib} ${pmemlib2} ${pmemlib3})
# target_link_libraries(${EXE} PUBLIC ${LIBPMEMOBJ})
# target_include_directories(${EXE} lpmemobj)
target_link_libraries(${EXE} "-L/usr/local/lib -lpmemobj")